[gd_scene load_steps=12 format=2]

[ext_resource path="res://art/player/bullet/bullets/enemy bullets/round spin/spining on side4.png" type="Texture" id=1]
[ext_resource path="res://art/player/bullet/bullets/enemy bullets/round spin/spining on side2.png" type="Texture" id=2]
[ext_resource path="res://art/player/bullet/bullets/enemy bullets/round spin/spining on side3.png" type="Texture" id=3]
[ext_resource path="res://art/player/bullet/bullets/enemy bullets/round spin/spining on side1.png" type="Texture" id=4]
[ext_resource path="res://art/player/bullet/bullets/enemy bullets/round spin/spining on side5.png" type="Texture" id=5]
[ext_resource path="res://art/player/bullet/bullets/enemy bullets/round spin/spining on side6.png" type="Texture" id=6]
[ext_resource path="res://roundspinnbullethellSplittFour.gd" type="Script" id=7]
[ext_resource path="res://light animted.tres" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "spin",
"speed": 9.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 5.48261

[sub_resource type="CircleShape2D" id=3]
radius = 5.81434

[node name="roundspinnbullet" type="KinematicBody2D"]
collision_layer = 64
collision_mask = 47
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1.12941, 1, 1, 1 )
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 1 )
animation = "spin"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
disabled = true

[node name="roundspinhit" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 63

[node name="CollisionShape2D" type="CollisionShape2D" parent="roundspinhit"]
shape = SubResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 8 )
shadow_enabled = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.198428, -0.198421 )
scale = Vector2( 2.05165, 2.01197 )
[connection signal="area_entered" from="roundspinhit" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="roundspinhit" to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
